# arm22_control

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: industrial_ci_action.yml
config/: controllers.yaml  settings.yaml
include/arm21_control/: arm21_hw_interface.h  arm21_sim_interface.h
include/arm22_control/: arm22_hw_interface.h  arm22_sim_interface.h
launch/: control_hw.launch  control_sim.launch
scripts/: joystick_op.py  serial.py  serial_echo.py
src/: arm21_hw_interface.cpp  arm21_hw_main.cpp  arm21_sim_interface.cpp  arm21_sim_main.cpp  arm22_hw_interface.cpp  arm22_hw_main.cpp  arm22_sim_interface.cpp  arm22_sim_main.cpp
srv/: serial.srv
