<?xml version="1.0"?>
<package format="2">
  <name>arm22_control</name>
  <version>0.0.0</version>
  <description>The arm22_control package</description>
  
  <maintainer email="burka@todo.todo">burka</maintainer>

  <license>TODO</license>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>ros_control_boilerplate</build_depend>
  <build_depend>rover_utils</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>ros_control_boilerplate</exec_depend>
</package>
